# python-agentic-crew

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/actions/agentic-ci-resolution/: action.yml
.github/actions/agentic-issue-triage/: action.yml
.github/actions/agentic-pr-review/: action.yml
.github/workflows/: ci.yml  codeql.yml  docs-push.yml  ecosystem-connector.yml  jules-supervisor.yml
docs/: conf.py  index.rst
docs/_build/html/: .buildinfo  AGENTS.html  ARCHITECTURE.html  CLAUDE.html  INTEGRATION.html  QUICKSTART.html  VENDOR_CONNECTORS_INTEGRATION.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: AGENTS.doctree  ARCHITECTURE.doctree  CLAUDE.doctree  INTEGRATION.doctree  QUICKSTART.doctree  VENDOR_CONNECTORS_INTEGRATION.doctree  environment.pickle  index.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: INTEGRATION.md.txt  VENDOR_CONNECTORS_INTEGRATION.md.txt  index.rst.txt
docs/_build/html/_static/: custom.css
docs/_build/html/api/: agentic_crew.html  index.html  modules.html  pytest_agentic_crew.html
docs/_build/html/development/: contributing.html
docs/_build/html/getting-started/: installation.html  quickstart.html
docs/_build/html/memory-bank/: activeContext.html
docs/_static/: custom.css
examples/python/: README.md  minimal_run.py
examples/typescript/: README.md  agentic-crew-types.ts  crew-tool.ts  vercel-ai-integration.ts
examples/vendor-connectors/: QUICKSTART.md  README.md  manifest.yaml  pyproject.toml.example
examples/vendor-connectors/knowledge/api_patterns/: rest_api_best_practices.md
src/agentic_crew/: __init__.py  main.py
src/agentic_crew/core/: discovery.py  loader.py
src/agentic_crew/crews/: __init__.py
src/agentic_crew/crews/asset_pipeline/: __init__.py  asset_crew.py
src/agentic_crew/flows/: __init__.py  asset_generation_flow.py  asset_integration_flow.py  game_design_flow.py  implementation_flow.py  prototype_to_production_flow.py  tdd_prototype_flow.py
tests/: test_discovery.py  test_file_tools.py  test_flows.py  test_loader.py  test_runners.py
tests/e2e/: README.md  __init__.py  conftest.py  test_crewai_e2e.py  test_langgraph_e2e.py  test_strands_e2e.py
(+40 files in other folders)
