[project]
name = "agentic-crew"
version = "0.1.0"
description = "CrewAI-based AI agent crews for the jbcom ecosystem"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Jon Bogaty", email = "jon@jonbogaty.com" }]
keywords = ["crewai", "ai-agents", "automation", "mcp", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "crewai[tools,anthropic]>=1.5.0",
    "pyyaml>=6.0.3",
    "pydantic>=2.12.4",
    "vendor-connectors[meshy]>=202511.12.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.25.0",
]
tests = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
]
mcp = [
    "mcp>=1.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-js>=3.2.2",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "myst-parser>=3.0.0",
    "sphinxcontrib-mermaid>=0.9.2",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
agentic-crew = "agentic_crew.main:main"
run-crew = "agentic_crew.crew:kickoff"
train-crew = "agentic_crew.crew:train"

[project.urls]
Homepage = "https://github.com/jbcom/agentic-crew"
Repository = "https://github.com/jbcom/agentic-crew"
Documentation = "https://github.com/jbcom/agentic-crew#readme"
Issues = "https://github.com/jbcom/agentic-crew/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_crew"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4"]
ignore = ["D", "T201"]

[tool.ruff.lint.isort]
known-first-party = ["agentic_crew"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
